# vdisk

./: Cargo.toml  README.md  parameter.txt
src/: cli.rs  gpt.rs  io.rs  lib.rs  main.rs  utils.rs
src/commands/: cp.rs  info.rs  mkgpt.rs  mkimg.rs  mod.rs  mv.rs
src/fatfs/: boot_sector.rs  dir.rs  dir_entry.rs  file.rs  fs.rs  io.rs  mod.rs
src/fs/: ext4.rs  fat.rs  mod.rs
tests/: disk_cli_test.rs
