[package]
name = "vdisk"
version = "0.0.1-dev-260209"
edition = "2024"
description = "Virtual disk image tool for creating, partitioning, formatting, and manipulating images"
license = "Apache-2.0"
repository = "https://github.com/rslabbox/vdisk"
homepage = "https://github.com/rslabbox/vdisk"
authors = ["Debin <luodeb@outlook.com>"]

[dependencies]
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.12.0"

serde = { version = "1.0", features = ["derive"] }
bitflags = { version = "2", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde_json = "1.0"

# FS
rsext4 = { version = "0.1.0-pre.0", default-features = false } # Since version 0.1.0-pre.0 hasn't been released yet
gpt = { version = "4.1.0", features = ["log"] }
# fatfs = "0.4" // Since version 0.4 hasn't been released yet

[dev-dependencies]
tempfile = "3.12"
